--- a/JonahsWhale/Base.lproj/Main.storyboard
+++ b/JonahsWhale/Base.lproj/Main.storyboard
@@ -131,6 +131,10 @@
                                     <action selector="clickAddRepoButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zh2-Eg-Co1"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yIW-yR-Kz8">
+                                <rect key="frame" x="-1" y="518" width="602" height="318"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -138,7 +142,11 @@
                             <constraint firstItem="R0y-Wv-7mS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0b6-Uz-63C"/>
                             <constraint firstItem="ocM-9G-VJ3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="22q-uz-NQE"/>
                             <constraint firstItem="lzv-KY-9MO" firstAttribute="top" secondItem="pe7-sW-UhT" secondAttribute="bottom" constant="38" id="APL-JJ-07j"/>
+                            <constraint firstItem="yIW-yR-Kz8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-21" id="Rnc-tY-vvw"/>
+                            <constraint firstItem="yIW-yR-Kz8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VwM-f5-AGh"/>
+                            <constraint firstItem="yIW-yR-Kz8" firstAttribute="top" secondItem="bjw-cL-zIv" secondAttribute="bottom" constant="18" id="WAc-Vo-Dly"/>
                             <constraint firstItem="lzv-KY-9MO" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="179:600" id="eE3-EX-jla"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yIW-yR-Kz8" secondAttribute="trailing" constant="-21" id="iJS-93-4gN"/>
                             <constraint firstItem="pe7-sW-UhT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="63" id="k0S-u3-AyV"/>
                             <constraint firstItem="pe7-sW-UhT" firstAttribute="centerX" secondItem="bjw-cL-zIv" secondAttribute="centerX" id="lEI-ze-cpf"/>
                             <constraint firstItem="bjw-cL-zIv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xzV-zr-92s"/>
@@ -146,6 +154,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Iqg-ke-t5x"/>
                     <connections>
+                        <outlet property="configuredAgentList" destination="yIW-yR-Kz8" id="6aO-Ic-t2z"/>
                         <outlet property="consoleText" destination="bjw-cL-zIv" id="06I-XE-CQV"/>
                         <segue destination="Ns7-sf-ky3" kind="show" identifier="segueGalleryViewController" id="Upx-We-eir"/>
                         <segue destination="TUv-Az-d2W" kind="show" identifier="fromMainToAllProjects" id="SIY-Iz-xz9"/>
@@ -280,7 +289,7 @@
         <image name="tc_logo" width="112" height="112"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZCX-xZ-hMq"/>
+        <segue reference="SIY-Iz-xz9"/>
         <segue reference="eEs-pj-KxL"/>
     </inferredMetricsTieBreakers>
 </document>
