--- a/JonahsWhale/AllProjectsViewCell.xib
+++ b/JonahsWhale/AllProjectsViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,12 +22,11 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gah-7u-n5y">
-                        <frame key="frameInset" minX="235" minY="22" width="51" height="31"/>
-                    </switch>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gah-7u-n5y"/>
                 </subviews>
                 <constraints>
                     <constraint firstItem="ZGk-dB-Nu4" firstAttribute="centerY" secondItem="ecg-Qj-OvP" secondAttribute="centerY" id="M35-ub-yMo"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Gah-7u-n5y" secondAttribute="trailing" constant="28" id="WmI-Nv-awh"/>
                     <constraint firstItem="Gah-7u-n5y" firstAttribute="centerY" secondItem="ecg-Qj-OvP" secondAttribute="centerY" id="wsp-sp-YGE"/>
                 </constraints>
             </tableViewCellContentView>
